--- a/javax/pom.xml
+++ b/javax/pom.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+	<parent>
+		<groupId>tech.lapsa</groupId>
+		<artifactId>eurasia36-root</artifactId>
+		<version>CURRENT-SNAPSHOT</version>
+	</parent>
 
 	<groupId>tech.lapsa</groupId>
 	<artifactId>javax</artifactId>
@@ -8,13 +15,13 @@
 	<packaging>pom</packaging>
 
 	<modules>
-	    <module>cdi-commons</module>
-	    <module>faces-commons</module>
-	    <module>javaee-bom</module>
-	    <module>jms-commons</module>
-	    <module>jpa-commons</module>
-	    <module>rs-commons</module>
-	    <module>validation-commons</module>
+		<module>cdi-commons</module>
+		<module>faces-commons</module>
+		<module>javaee-bom</module>
+		<module>jms-commons</module>
+		<module>jpa-commons</module>
+		<module>rs-commons</module>
+		<module>validation-commons</module>
 	</modules>
 
 </project>
