--- a/lapsa/pom.xml
+++ b/lapsa/pom.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+	<parent>
+		<groupId>tech.lapsa</groupId>
+		<artifactId>eurasia36-root</artifactId>
+		<version>CURRENT-SNAPSHOT</version>
+	</parent>
 
 	<groupId>tech.lapsa</groupId>
 	<artifactId>lapsa</artifactId>
@@ -8,12 +15,12 @@
 	<packaging>pom</packaging>
 
 	<modules>
-	    <module>arquillian-test</module>
-	    <module>fontawesome-free-jsf</module>
-	    <module>jms-rpc</module>
-	    <module>mail</module>
-	    <module>primefaces</module>
-	    <module>text</module>
+		<module>arquillian-test</module>
+		<module>fontawesome-free-jsf</module>
+		<module>jms-rpc</module>
+		<module>mail</module>
+		<module>primefaces</module>
+		<module>text</module>
 	</modules>
 
 </project>
