--- a/.gitmodules
+++ b/.gitmodules
@@ -190,3 +190,6 @@
 [submodule "docker"]
 	path = docker
 	url = https://github.com/eurasia-insurance/eurasia36-docker.git
+[submodule "eurasia36/deploy"]
+	path = eurasia36/deploy
+	url = https://github.com/eurasia-insurance/eurasia36-deploy.git
