--- a/.gitmodules
+++ b/.gitmodules
@@ -196,3 +196,6 @@
 [submodule "web/eurasia36.kz"]
 	path = web/eurasia36.kz
 	url = https://github.com/eurasia-insurance/eurasia36-web.git
+[submodule "web/payment.eurasia36.kz"]
+	path = web/payment.eurasia36.kz
+	url = https://github.com/eurasia-insurance/epayment-web.git
