--- a/insurance/pom.xml
+++ b/insurance/pom.xml
@@ -15,6 +15,7 @@
 	<packaging>pom</packaging>
 
 	<modules>
+		<module>bom</module>
 		<module>domain</module>
 		<module>dao-client</module>
 		<module>dao</module>
