--- a/calculator/pom.xml
+++ b/calculator/pom.xml
@@ -14,6 +14,8 @@
 	<version>CURRENT-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
+	<name>Calculator Lib</name>
+
 	<modules>
 		<module>policy</module>
 	</modules>
