--- a/esbd/pom.xml
+++ b/esbd/pom.xml
@@ -14,6 +14,8 @@
 	<version>CURRENT-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
+	<name>ESBD Lib</name>
+
 	<modules>
 		<module>jaxws-client</module>
 		<module>connection</module>
