--- a/eurasia/pom.xml
+++ b/eurasia/pom.xml
@@ -14,6 +14,8 @@
 	<version>CURRENT-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
+	<name>Eurasia Lib</name>
+
 	<modules>
 		<module>domain</module>
 		<module>dao-client</module>
