--- a/javax/pom.xml
+++ b/javax/pom.xml
@@ -14,6 +14,8 @@
 	<version>CURRENT-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
+	<name>Jave EE Lib</name>
+
 	<modules>
 		<module>cdi-commons</module>
 		<module>faces-commons</module>
