--- a/payara/pom.xml
+++ b/payara/pom.xml
@@ -14,6 +14,8 @@
 	<version>CURRENT-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
+	<name>Payara Lib</name>
+
 	<modules>
 		<module>bom</module>
 		<module>hibernate-validation</module>
