--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>tech.lapsa.maven</groupId>
+		<artifactId>maven-general</artifactId>
+		<version>20190102</version>
+	</parent>
 
 	<groupId>tech.lapsa</groupId>
 	<artifactId>eurasia36-root</artifactId>
@@ -24,18 +29,5 @@
 		<module>calculator</module>
 		<module>eurasia</module>
 	</modules>
-
-	<distributionManagement>
-		<repository>
-			<id>release</id>
-			<name>artifactory.lapsa.tech-releases</name>
-			<url>https://artifactory.lapsa.tech/artifactory/libs-release-local</url>
-		</repository>
-		<snapshotRepository>
-			<id>snapshots</id>
-			<name>artifactory.lapsa.tech-snapshots</name>
-			<url>https://artifactory.lapsa.tech/artifactory/libs-snapshot-local</url>
-		</snapshotRepository>
-	</distributionManagement>
 
 </project>
