--- a/java/pom.xml
+++ b/java/pom.xml
@@ -4,9 +4,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>tech.lapsa</groupId>
-		<artifactId>eurasia36-root</artifactId>
-		<version>CURRENT-SNAPSHOT</version>
+		<groupId>tech.lapsa.maven</groupId>
+		<artifactId>maven-general</artifactId>
+		<version>20190102</version>
 	</parent>
 
 	<groupId>tech.lapsa</groupId>
