--- a/eurasia/pom.xml
+++ b/eurasia/pom.xml
@@ -22,6 +22,7 @@
 		<module>facade-client</module>
 		<module>facade</module>
 		<module>ws</module>
+		<module>deploy</module>
 	</modules>
 
 </project>
