--- a/java/pom.xml
+++ b/java/pom.xml
@@ -9,7 +9,7 @@
 		<version>20190102</version>
 	</parent>
 
-	<groupId>tech.lapsa</groupId>
+	<groupId>tech.lapsa.eurasia-projects-tree</groupId>
 	<artifactId>java</artifactId>
 	<version>CURRENT-SNAPSHOT</version>
 	<packaging>pom</packaging>
