--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
 		<version>20190102</version>
 	</parent>
 
-	<groupId>tech.lapsa</groupId>
-	<artifactId>eurasia36-root</artifactId>
+	<groupId>tech.lapsa.eurasia-projects-tree</groupId>
+	<artifactId>eurasia-projects-root</artifactId>
 	<version>CURRENT-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
-	<name>Eurasia36.KZ Lib</name>
+	<name>Eurasia Projects Tree</name>
 
 	<modules>
 		<module>java</module>
