--- a/esbd/pom.xml
+++ b/esbd/pom.xml
@@ -3,14 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>tech.lapsa.maven</groupId>
-		<artifactId>maven-general</artifactId>
-		<version>20190102</version>
+		<groupId>tech.lapsa.eurasia-projects-tree</groupId>
+		<artifactId>eurasia-projects-root</artifactId>
+		<version>SNAPSHOT-SNAPSHOT</version>
 	</parent>
 
-	<groupId>tech.lapsa.eurasia-projects-tree</groupId>
 	<artifactId>esbd</artifactId>
-	<version>CURRENT-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>ESBD Lib</name>
