--- a/java/pom.xml
+++ b/java/pom.xml
@@ -2,16 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<parent>
-		<groupId>tech.lapsa.maven</groupId>
-		<artifactId>maven-general</artifactId>
-		<version>20190102</version>
+		<groupId>tech.lapsa.eurasia-projects-tree</groupId>
+		<artifactId>eurasia-projects-root</artifactId>
+		<version>SNAPSHOT-SNAPSHOT</version>
 	</parent>
 
-	<groupId>tech.lapsa.eurasia-projects-tree</groupId>
 	<artifactId>java</artifactId>
-	<version>CURRENT-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Java SE Lib</name>
