--- a/pom.xml
+++ b/pom.xml
@@ -2,15 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>tech.lapsa.maven</groupId>
-		<artifactId>maven-general</artifactId>
-		<version>20190102</version>
-	</parent>
 
 	<groupId>tech.lapsa.eurasia-projects-tree</groupId>
 	<artifactId>eurasia-projects-root</artifactId>
-	<version>CURRENT-SNAPSHOT</version>
+	<version>SNAPSHOT-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Eurasia Projects Tree</name>
