--- a/pom.xml
+++ b/pom.xml
@@ -25,4 +25,78 @@
 		<module>eurasia</module>
 	</modules>
 
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>exec-maven-plugin</artifactId>
+					<version>1.6.0</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-antrun-plugin</artifactId>
+					<version>1.8</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+
+	</build>
+
+	<profiles>
+		<profile>
+			<id>release</id>
+			<activation>
+				<property>
+					<name>release</name>
+				</property>
+			</activation>
+			<build>
+				<defaultGoal>initialize</defaultGoal>
+				<plugins>
+					<!-- <plugin> -->
+					<!-- <groupId>org.codehaus.mojo</groupId> -->
+					<!-- <artifactId>exec-maven-plugin</artifactId> -->
+					<!-- <executions> -->
+					<!-- <execution> -->
+					<!-- <phase>initialize</phase> -->
+					<!-- <goals> -->
+					<!-- <goal>exec</goal> -->
+					<!-- </goals> -->
+					<!-- </execution> -->
+					<!-- </executions> -->
+					<!-- <configuration> -->
+					<!-- <executable>bash</executable> -->
+					<!-- <arguments> -->
+					<!-- <argument>-c \'${project.basedir}/bin/release ${release}\'</argument> -->
+					<!-- </arguments> -->
+					<!-- </configuration> -->
+					<!-- </plugin> -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>generateSources</id>
+								<phase>initialize</phase>${
+								<configuration>
+									<tasks>
+										<exec executable="bash">
+											<arg value="-c" />
+											<arg value="'${project.basedir}/bin/release ${release}'" />
+										</exec>
+									</tasks>
+								</configuration>
+								<goals>
+									<goal>run</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 </project>
